--- a/index.html
+++ b/index.html
@@ -150,19 +150,62 @@
             margin-top: 2rem;
         }
 
-        .movie-card {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 15px;
-            overflow: hidden;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
+       .movie-card {
+  width: 300px;
+  height: 400px;
+  perspective: 1000px;
+  cursor: pointer;
+}
 
-        .movie-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
-        }
+.card {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+}
+
+.card-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.999s ease-in-out;
+}
+
+.movie-card:hover .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 15px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-front {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  color: white;
+  transform: rotateY(0deg);
+}
+
+.card-back {
+  background: #F08A5D;
+  color: white;
+  transform: rotateY(180deg);
+  padding: 1.5rem;
+  text-align: center;
+  font-size: 1rem;
+  line-height: 1.5;
+}
 
         .movie-poster {
             width: 100%;
@@ -557,6 +600,49 @@
         }
 
         // Display movies
+        function displayMovies() {
+    const moviesGrid = document.getElementById('moviesGrid');
+    moviesGrid.innerHTML = '';
+
+    const movieOverviews = {
+        "Galactic Warriors": "To find her missing sister, a fearless bounty hunter and her partner infiltrate a brutal intergalactic prison planet for women—where survival means defying the odds.",
+        "Love in Paris": "Ten years after a passionate affair, John travels to Paris seeking closure. Instead, he’s drawn into a mysterious romance with Lea, a woman tied to his past, forcing him to confront the shadows of love and regret.",
+        "Mystery Island": "A group of explorers uncover ancient secrets on a remote island, but the truth may cost them their lives.",
+        "Comedy Central": "A washed-up comedian gets one last shot at fame when he’s forced to mentor a group of misfit performers.",
+        "Dark Shadows": "A haunted mansion reveals terrifying secrets as a family confronts the ghosts of their past.",
+        "Space Odyssey": "An astronaut embarks on a journey beyond the stars to uncover the origins of humanity."
+    };
+
+    movies.forEach(movie => {
+        const movieCard = document.createElement('div');
+        movieCard.className = 'movie-card';
+
+        movieCard.innerHTML = `
+            <div class="card">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <div class="movie-poster">${movie.title}</div>
+                        <div class="movie-info">
+                            <h3>${movie.title}</h3>
+                            <div class="movie-rating">${movie.rating}</div>
+                            <p><strong>Genre:</strong> ${movie.genre}</p>
+                            <p><strong>Duration:</strong> ${movie.duration}</p>
+                        </div>
+                    </div>
+                    <div class="card-back">
+                        <p>${movieOverviews[movie.title]}</p>
+                    </div>
+                </div>
+            </div>
+        `;
+
+        movieCard.addEventListener('click', () => {
+            showPage('showtimes');
+        });
+
+        moviesGrid.appendChild(movieCard);
+    });
+}
         function displayMovies() {
             const moviesGrid = document.getElementById('moviesGrid');
             moviesGrid.innerHTML = '';
